# MLOPS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  airflow.Dockerfile  benchmark_api.py  benchmark_results.json  docker-compose-airflow.yaml  docker-compose.yaml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-airflow.txt  run_api.py  sitemap.xml
.dvc/: config
.github/workflows/: ci.yml
ci-cd/: index.html
dags/: dvc_helpers.py  dvc_init_dag.py  training_pipeline.py
data/: .gitignore
docker/: index.html
docs/: ci-cd.md  docker.md  index.md  setup.md  workflow.md
mlops/: __init__.py  __main__.py  cli.py  tracking.py
models/: clearml_2b1d16b9_Random_Forest_Extended_Features.joblib.dvc  clearml_47909b23_Random_Forest_Extended_Features.joblib.dvc  clearml_7f3f8eb5_Random_Forest_Extended_Features.joblib.dvc  clearml_d28cf3d7_Random_Forest_Extended_Features.joblib.dvc  clearml_f93f3e18_Random_Forest_Extended_Features.joblib.dvc  eval_Random_Forest_Extended_1st_Run_Features_extended.txt  eval_Random_Forest_Extended_2st_Run_Features_extended.txt  eval_Random_Forest_Extended_3st_Run_Features_extended.txt  eval_Random_Forest_Extended_4st_Run_Features_extended.txt  evaluation_results.txt  logreg_baseline.joblib.dvc  logreg_extended.joblib.dvc  model_baseline.joblib.dvc  model_comparison.csv  model_comparison_report.md  model_extended.joblib.dvc  rf_baseline.joblib.dvc  rf_extended.joblib.dvc
search/: search_index.json
service/: Dockerfile  README.md  __init__.py  requirements.txt
setup/: index.html
tests/: __init__.py  dummy_test.py
workflow/: index.html
(+18 files in other folders)
