[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "MLOps project"
authors = ["Vlaidslav Saifulin <thenorthlord@yandex.ru>"]
readme = "README.md"
packages = [{include = "mlops"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^2.3.0"
polars = "^1.30.0"
scikit-learn = "^1.7.0"
mkdocs-material = "^9.6.14"
apache-airflow = "^3.0.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.13"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
dvc = "^3.60.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "I", "B", "W", "C4", "UP", "N", "ANN", "D"]
lint.ignore = ["D203", "D212"]

[tool.ruff.lint.isort]
known-first-party = ["mlops"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.poetry.scripts]
mlops = "mlops.cli:main"
